--- a/index.html
+++ b/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop Cart</title>
-    <link rel="stylesheet" href="css/home.css">
-</head>
-<body>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    /> <!--bootstrap css applied-->
+    <link rel="stylesheet" href="css/common.css"> <!--common css applied that will be common to many parts-->
+    <link rel="stylesheet" href="css/home.css" /> <!--to customise something we will overwrite the common css by home.css-->
+  </head>
+  <body>
+    <div class="homePage">
+        <!-- header -->
+         <nav id="header">
+            <div class="container">
+                <div class="row">
+                    <div class="header-wrapper d-flex justify-content-between">
+                        <!--we have made this div flex, with justify content as space between-->
+                        <div class="logo d-inline-block">
+                            <a href="index.html" class="text-decoration-none">Shop Cart</a>
+                        </div>
+                        <div class="user-actions d-flex flex-row">
+                            <a href="cart.html" class="text-decoration-none">Cart</a>
+                            <div class="user-intro" id="userIntro">Hi User</div>
+                            <div class="logout-btn" id="logoutBtn">Log out</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </nav>
+    </div>
+
+    <!-- main content -->
+     <div class="container">
+        <div class="row">
+            <h2 class="home-title text-center">welcome to shop cart</h2>
+            <div class="category-list d-flex flex-row justify-content-center align-items-center" id="category">
+                <!-- TODO: Add category childs -->
+            </div>
+            <div class="category-title text-center">
+                select a category to start shopping
+            </div>
+        </div>
+     </div>
+
+
+
+
+
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
