added css to common header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <a href="index.html" class="text-decoration-none">Shop Cart</a>
                         </div>
                         <div class="user-actions d-flex flex-row">
-                            <a href="cart.html" class="text-decoration-none">Cart</a>
+                            <a href="cart.html">Cart</a>
                             <div class="user-intro" id="userIntro">Hi User</div>
                             <div class="logout-btn" id="logoutBtn">Log out</div>
                         </div>
@@ -36,7 +36,7 @@
     <!-- main content -->
      <div class="container">
         <div class="row">
-            <h2 class="home-title text-center">welcome to shop cart</h2>
+            <h2 class="home-title text-center">Welcome to Shop Cart</h2>
             <div class="category-list d-flex flex-row justify-content-center align-items-center" id="category">
                 <!-- TODO: Add category childs -->
             </div>
