added css and html for categories on homepage

--- a/index.html
+++ b/index.html
@@ -37,8 +37,35 @@
      <div class="container">
         <div class="row">
             <h2 class="home-title text-center">Welcome to Shop Cart</h2>
-            <div class="category-list d-flex flex-row justify-content-center align-items-center" id="category">
+            <div class="category-list d-flex flex-row justify-content-between align-items-center" id="category">
                 <!-- TODO: Add category childs -->
+                <!-- List of categories-->
+                 <div class="category-item d-flex align-items-center justify-content-center">
+                    <a href="">All Products</a>
+                 </div>
+
+                 <div class="category-item d-flex align-items-center justify-content-center">
+                    <a href="">Electronics</a>
+                 </div>
+
+                 <div class="category-item d-flex align-items-center justify-content-center">
+                    <a href="">Kitechen Ware</a>
+                 </div>
+
+                 <div class="category-item d-flex align-items-center justify-content-center">
+                    <a href="">Women Outfit</a>
+                 </div>
+
+                 <div class="category-item d-flex align-items-center justify-content-center">
+                    <a href="">Sports</a>
+                 </div>
+
+                 <div class="category-item d-flex align-items-center justify-content-center">
+                    <a href="">Gaming</a>
+                 </div>
+
+
+
             </div>
             <div class="category-title text-center">
                 select a category to start shopping
